--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,18 @@
     <artifactId>EmailLoggingProbationTask</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.6.6</version>
+    </dependency>
+
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>1.0.9</version>
+    </dependency>
+
     <dependencies>
         <dependency>
             <groupId>javax.mail</groupId>
